# Dashboard-application

./: ButtonOperations.qml  CMakeLists.txt  CameraView.qml  CameraViewButton.qml  CustomMusicButton.qml  CustomPlayButton.qml  FrontCameraView.qml  HomeView.qml  LeftCameraView.qml  LeftPanel.qml  Main.qml  MapView.qml  MusicView.qml  PhoneView.qml  PlayButton.qml  Player.qml  RearCameraView.qml  Resources.qrc  ReturnCameraButton.qml  RightCameraView.qml  RightPanel.qml  Speedometer.qml  backend.cpp  backend.h  main.cpp  resources.cpp  resources.h
Headers/: backend.h  resources.h
QML/: ButtonOperations.qml  CameraView.qml  CameraViewButton.qml  CustomMusicButton.qml  CustomPlayButton.qml  FrontCameraView.qml  HomeView.qml  LeftCameraView.qml  LeftPanel.qml  Main.qml  MapView.qml  MusicView.qml  PhoneView.qml  PlayButton.qml  Player.qml  RearCameraView.qml  ReturnCameraButton.qml  RightCameraView.qml  RightPanel.qml  Speedometer.qml
